<resources>
    <string name="app_name">calculator</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="enter">Enter</string>
    <string name="result">Result</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="multi">MuLTI</string>
    <string name="sub">SUB</string>
    <string name="sum">SUM</string>
    <string name="dev">Dev</string>
</resources>